RESOLVED FIXED13052
Text not rendered in a second inline SVG element
https://bugs.webkit.org/show_bug.cgi?id=13052
Summary Text not rendered in a second inline SVG element
Charlie Vaske
Reported 2007-03-12 23:16:40 PDT
With two duplicate SVG elements inline in xhtml, the second SVG element will not render SVGText elements. To reproduce, see attachment. (Oddly, Firefox has the same bug on OS X: https://bugzilla.mozilla.org/show_bug.cgi?id=316564)
Attachments
Test case (766 bytes, application/xhtml+xml)
2007-03-12 23:18 PDT, Charlie Vaske
no flags
First attempt (50.11 KB, patch)
2007-04-26 14:27 PDT, Rob Buis
oliver: review+
Charlie Vaske
Comment 1 2007-03-12 23:18:36 PDT
Created attachment 13605 [details] Test case Left and right should be identical
David Kilzer (:ddkilzer)
Comment 2 2007-03-13 03:58:49 PDT
Confirmed with a local debug build of WebKit r20141 with Safari 2.0.4 (419.3) and Mac OS X 10.4.8 (8L127).
Rob Buis
Comment 3 2007-04-26 14:27:33 PDT
Created attachment 14211 [details] First attempt I am not 100% why this works, maybe olliej can check it? Cheers, Rob.
Oliver Hunt
Comment 4 2007-04-27 02:38:42 PDT
Patch is fine, add the layout test changes we talked about in irc.
Rob Buis
Comment 5 2007-04-27 04:40:43 PDT
Landed in r21144.
Note You need to log in before you can comment on or make changes to this bug.