        Reviewed by Oliver.

http://bugs.webkit.org/show_bug.cgi?id=13052
        Text not rendered in a second inline SVG element

        Correct the rendering of svg text when embedded in non-svg container.



Canonical link: https://commits.webkit.org/17661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21144 268f45cc-cd09-0410-ab3c-d52691b4dbfc